# AI-Engineering-Learning

./: .gitignore  README.md
EmbeddingsAndVectorDatabases/embedding/: index.html  package.json  pnpm-lock.yaml
EmbeddingsAndVectorDatabases/text-chunking/: index.html  package.json  pnpm-lock.yaml
HuggingFaceAgentsCourse/agentIntro/: agenticRAG.py  main.py  multiagent.ipynb  pyproject.toml  smollagentTools.py
HuggingFaceAgentsCourse/llamaindex/: .gitignore  agents.ipynb  llamahubIntro.ipynb  pyproject.toml  tools.ipynb  workflows.ipynb
RAGForLLMS-ZTM/: pyproject.toml
RAGForLLMS-ZTM/Basics of Retreval systems/: [NEW] Basics of Retrieval Systems.ipynb
RAGForLLMS-ZTM/Basics of Retreval systems/index_dir/: MAIN_3cu0chx72g06ck6m.seg  _MAIN_1.toc
agent-development-kit-brndn/: README.md  main.py  pyproject.toml
agent-development-kit-brndn/5-session-and-state/: basic_stateful_session.py
agent-development-kit-brndn/6-persistent-storage/: main.py
agent-development-kit-brndn/8-stateful-multi-agent/: main.py
agents/: promptHacks.md
agents/FunctionAgents/: index.html  package.json  pnpm-lock.yaml
agents/ReActAgents/: package.json
assistantsApi/AssistantOne/: package.json
browser-use-test/: README.md  auth.json  example_result.py  main.py  pyproject.toml  sensitive.py  temp.py
crewai-AI-agents/: Copy of CrewAI - Interview Prep Part 2.ipynb  CrewAI - Interview Prep Part 2.ipynb  CrewAI - Job Interview Prep Part 1.ipynb  README.md  demo.ipynb  human-input-guide.md  job-data.txt  main.py  pyproject.toml
crewai-AI-agents/capstone-project/: Capstone Project - Starter Code.ipynb
genkit-workshop/: .gitignore  package.json  pnpm-lock.yaml
genkit-workshop/prompts/: recipe-generator.prompt  story-generator.prompt
genkit-workshop/src/: example2-basic.ts  example3-flows.ts  index.ts
introToAIEngineering/: index.html  index.ts  package.json  pnpm-lock.yaml
langGraphCodes/: main.py  pyproject.toml
langGraphCodes/Agents/: Agent_Bot.py  Drafter.py  Memory_Agent.py  RAG_Agent.py  chroma.sqlite3  elements_combinations.py  elements_data.html  html_to_combinations.py  logging.txt  reAct.py
langGraphCodes/Graphs/: Conditional_Agent.ipynb  Conditional_Agent_Exercise.ipynb  Hello_World.ipynb  Looping.ipynb  Looping_Exercise.ipynb  Multiple_inputs.ipynb  Sequential_Agent.ipynb  Sequential_Agent_Exercise.ipynb
langchain/scrimba-bot/: index.html  package.json  pnpm-lock.yaml
open-source-models/: index.html  package.json  pnpm-lock.yaml
polyGlot/: index.css  index.html  index.js  package.json  pnpm-lock.yaml
ready-tensor-course/: Readme.md
ready-tensor-course/week5/: .env.example  README.md  criw.md  joke.py  ls-intro.py  prompt_bulder.py  prompt_config.yaml  pyproject.toml  tool_agent.py  utils.py
ready-tensor-course/week6/: README.md  aaa.md  consts.py  extract-entities.py  langgraph_utils.py  llm.py  paths.py  prompt_builder.py  pyproject.toml  utils.py
ready-tensor-course/week6/config/: config.yaml  gazetteer_entities.yaml  reasoning.yaml
ready-tensor-course/week6/data/: publication_example1.md
ready-tensor-course/week6/graphs/: tag_generation_graph.py
ready-tensor-course/week6/nodes/: output_types.py  tag_generation.py
ready-tensor-course/week6/states/: tag_generation_state.py
rsrch-prpsl/: .gitignore  README.md  agent-process-log.txt  create_inventory_db.py  data-to-sql.py  db-explore.ipynb  inventory.db  inventory_data.json  langgraph.json  main.py  pyproject.toml  qa-sql.py  questions.txt  sql_agent.py  sql_agent_langgraph.py  visualization-considerations.md
rsrch-prpsl/agent-chat-app/: package.json  pnpm-lock.yaml
rsrch-prpsl/agent-chat-app/apps/web/src/components/thread/messages/: ai.tsx  tool-calls.tsx
rsrch-prpsl/chroma_langchain_db/07936e7b-5b63-46be-b1fb-69c148dfa781/: index_metadata.pickle
translation-api-worker/: package.json  pnpm-lock.yaml  wrangler.jsonc
(+105 files in other folders)
