[project]
name = "ragforllms-ztm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "nltk==3.9.1",
    "numpy>=2.2.4",
    "pip>=25.0.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.6.1",
    "whoosh>=2.7.4",
]
