[project]
name = "rsrch-prpsl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "langchain>=0.3.27",
    "langchain-cerebras>=0.5.0",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.0",
    "langgraph-cli>=0.4.2",
    "pandas>=2.3.1",
    "matplotlib>=3.9.0",
    "pip>=25.1.1",
    "pyppeteer>=2.0.0",
]
