[project]
name = "agentintro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.0.1",
    "google-auth>=2.38.0",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.21",
    "litellm>=1.65.7",
    "openai>=1.72.0",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.0",
    "rank-bm25>=0.2.2",
    "shapely>=2.1.0",
    "smolagents[litellm]>=1.13.0",
]
