[project]
name = "llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=8.24.2",
    "datasets>=3.5.0",
    "ipykernel>=6.29.5",
    "llama-index>=0.12.30",
    "llama-index-callbacks-arize-phoenix>=0.5.0",
    "llama-index-embeddings-google-genai>=0.1.0",
    "llama-index-embeddings-huggingface-api>=0.3.0",
    "llama-index-llms-openrouter>=0.3.1",
    "llama-index-vector-stores-chroma>=0.4.1",
    "pip>=25.0.1",
]
