[project]
name = "week6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.9",
    "pip>=25.2",
    "python-dotenv>=1.1.1",
    "spacy>=3.8.7",
]
